<resources>
    <string name="app_name">DM</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message">Message</string>
    <string name="no_content">No content</string>
    <string name="followed">followed</string>
    <string name="follow">follow</string>
    <string name="say_something">say something..</string>
    <string name="archive">Archive</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="type_something">type something.</string>
    <string name="todo">TODO</string>
    <string name="active_now">Active Now</string>
    <string name="location">location</string>
    <string name="typing">typing..</string>
    <string name="menu">menu</string>
    <string name="what_s_in_your_mind">What\'s in your mind?</string>
    <string name="images">images</string>
    <string name="activity">Activity</string>
    <string name="update_here_profile_picture">Update here profile picture</string>
    <string name="wellcome">wellcome</string>
    <string name="view_all">"View All "</string>
    <string name="comments">" comments"</string>
    <string name="create_posts">Create posts</string>
    <string name="add_more">Add more</string>
    <string name="add_image">Add Image</string>
    <string name="add_video">Add video</string>
    <string name="seen">Seen</string>
    <string name="report">Report</string>
    <string name="notifications">Notifications</string>
    <string name="unfollow">Followed</string>
    <string name="friends">Friends</string>
    <string name="people_suggested">People Suggested</string>
    <string name="followers">Followers</string>
    <string name="followback">followback</string>
    <string name="deny">Deny</string>
    <string name="users">users</string>
    <string name="posts">Posts</string>
    <string name="search_posts">Search Posts</string>
    <string name="search_users">Search users</string>
    <string name="search_videos">Search videos</string>
    <string name="recent">Recent</string>
    <string name="add_comment">add comment</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="change_privacy">Change privacy</string>
    <string name="hide_posts">Hide posts</string>
    <string name="delete_posts">Delete posts</string>
    <string name="edit_posts">Edit posts</string>
    <string name="only_me">only-me</string>
    <string name="friendsSmall">friends</string>
    <string name="fublic">public</string>
    <string name="following">Following</string>
    <string name="videos">Videos</string>
    <string name="add_to_favorite">Add %1$s to favorite</string>
    <string name="unfollowcode">Unfollow %1$s</string>
    <string name="hide_all_postscode">Hide all %1$s posts</string>
    <string name="pick_photo">Pick photo</string>
    <string name="slash">/</string>
    <string name="more">%1$s+ more</string>
    <string name="logout">LogOut</string>
    <string name="channel_name">com.aknown389.directmessage</string>
    <string name="channel_description">com.example.directmessage channel is activating</string>
    <string name="current_name">Current Name:</string>
    <string name="bio">Bio:</string>
    <string name="location_in_about">Location:</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="videosMenu">Videos</string>
    <string name="friendsMenu">Friends</string>
    <string name="homeMenu">Home</string>
    <string name="you">You</string>
    <string name="chats">Chats</string>
    <string name="calls">Calls</string>
    <string name="people">People</string>
    <string name="stories">Stories</string>
    <string name="new_chat">New chat</string>
    <string name="me">me</string>
    <string name="send">send</string>
    <string name="Comments">Comments</string>
    <string name="sending">sending..</string>
    <string name="reaction">reaction</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="change_cover">Change cover</string>
    <string name="update_about">Update About</string>
    <string name="deleted" />
    <string name="deletedcomment">deleted</string>
    <string name="sampleqoute">“I’m selfish, impatient and a little insecure. I make mistakes, I am out of control and at times hard to handle. But if you can’t handle me at my worst, then you sure as hell don’t deserve me at my best.” ― Marilyn Monroe </string>
    <string name="sampleqoute2">“Two things are infinite: the universe and human stupidity; and I’m not sure about the universe.” ― Albert Einstein</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="verify">verify</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="password">password</string>
    <string name="confirm">confirm</string>
    <string name="register">register</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="please_verify_your_email_account">Please verify your email\naccount</string>
    <string name="din_t_receive_code">Didn\'t receive code?</string>
    <string name="verify_email">Verify email</string>
    <string name="forgot_password">Forgot password</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="edit_profile">Edit profile</string>
    <string name="settings_and_privacy">Settings and Privacy</string>
    <string name="password_manager">Password Manager</string>
    <string name="user_account_info">User Account Info</string>
    <string name="report_a_problem">Report a problem</string>
    <string name="language">Language</string>
    <string name="about">About</string>
    <string name="clear_space">Clear Space</string>
    <string name="switch_account">Switch Account</string>
    <string name="contact_us">Contact us</string>
    <string name="clear_cache">%1$s Clear cache</string>
    <string name="remove_account">remove account</string>
    <string name="cancel">Cancel</string>
    <string name="log_in">Log-in</string>
    <string name="submit_email">Submit email</string>
    <string name="please_input_email_connected_in_your_account">Please input email \nconnected in your account.</string>
    <string name="verify_code">verify code</string>
    <string name="Verify_code">Verify email</string>
    <string name="attempt">Attempt:</string>
    <string name="resend_otp">resend otp</string>
    <string name="loading">Loading...</string>
    <string name="submit">submit</string>
    <string name="gallery">Gallery</string>
    <string name="login">Login</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">new password</string>
    <string name="confirm_password">confirm password</string>
    <string name="do_not_forget_your_new_password">Do not forget your new password.</string>
    <string name="okay">Okay</string>
    <string name="success">Success</string>
    <string name="password_manager1">Password manager</string>
    <string name="download_image">Download image</string>
    <string name="see_followers">See followers</string>
    <string name="followedBigStartLetter">Followed</string>
    <string name="about_your_self">About your self</string>
    <string name="are_you_sure_you_want_to_delete">are you sure you want to delete?</string>
    <string name="downloading">Downloading..</string>

</resources>