<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_dialog_background">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/ic_menu"
        app:drawableTint="@color/blackOnDay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:orientation="vertical">

        <TextView
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:background="@drawable/chat_item_ripple"
            android:drawablePadding="10dp"
            android:text="@string/delete"
            android:textStyle="bold"
            android:textColor="@color/blackOnDay"
            app:drawableTint="@color/blackOnDay"
            app:drawableStartCompat="@drawable/baseline_delete_24" />
        <TextView
            android:id="@+id/seen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:text="@string/seen"
            android:background="@drawable/chat_item_ripple"
            android:textStyle="bold"
            android:textColor="@color/blackOnDay"
            app:drawableStartCompat="@drawable/baseline_remove_red_eye_24"
            app:drawableTint="@color/blackOnDay" />
        <TextView
            android:id="@+id/report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:background="@drawable/chat_item_ripple"
            android:drawablePadding="10dp"
            android:text="@string/report"
            android:textStyle="bold"
            android:textColor="@color/blackOnDay"
            app:drawableStartCompat="@drawable/baseline_report_24"
            app:drawableTint="@color/blackOnDay" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>