<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue2"
    tools:context=".activities.RecoverAccountActivity"
    android:padding="20dp">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/highresulutiontransparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_input_email_connected_in_your_account"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        app:layout_constraintHorizontal_bias="0"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/submitEmail"
        app:layout_constraintEnd_toEndOf="@+id/submitEmail"
        app:layout_constraintStart_toStartOf="@+id/submitEmail" />
    <EditText
        android:id="@+id/submitEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitEmailBtn"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@drawable/verify_otp_button_background"
        android:backgroundTint="@color/blue"
        android:text="@string/submit_email"
        android:textAllCaps="false"
        app:layout_constraintVertical_bias="0.1"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitEmail" />


</androidx.constraintlayout.widget.ConstraintLayout>